12/06 - Scrapping purchase part almost done, minor corrections to make